# resume-agent

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/core/: config.py
backend/app/routers/: jd.py  jobs.py  profile.py
backend/app/schemas/: ats.py  improver.py  jd.py  job.py  pipeline.py  profile.py  render.py  selector.py
backend/app/services/: ats.py  hiring_agent.py  improver.py  jd_adapters.py  jd_fetch.py  jobs.py  llm.py  pipeline.py  render.py  selector.py  storage.py
backend/tests/: conftest.py  test_api.py  test_ats.py  test_hiring_agent.py  test_improver.py  test_jd_fetch.py  test_jobs.py  test_pipeline.py  test_profile.py  test_render.py  test_selector.py
backend/tests/fixtures/: ashby.json  broken.tex  frontend.tex  generic_job.html  good.tex  greenhouse.json  hiring_agent_output.txt  jd_frontend.txt  jd_missingskill.txt  jd_sample.txt  lever.json  resume_sample.txt  twopage.tex  workday.json
docs/: 2026-07-20-resume-agent-design.md
docs/findings/: T1-hiring-agent.md  T2-renderer.md
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CountUp.tsx  Dropzone.tsx  FeedbackBox.tsx  HiringAgentCard.tsx  KeywordMarks.tsx  ScoreReveal.tsx  StepProgress.tsx
frontend/src/hooks/: useJobs.ts  useProfile.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Compose.tsx  Profile.tsx  Result.tsx  Run.tsx
