[project]
name = "resume-agent-backend"
version = "0.1.0"
description = "Resume Agent backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymupdf>=1.24",
    "ollama>=0.5",

]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
